--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">CADR</string>
+
+<!--    Login Activity      -->
+    <string name="logIn"> Login</string>
+    <string name="signUp"> Sign Up</string>
+    <string name="email"> Email address</string>
+    <string name="password"> Password</string>
+    <string name="forgotPassword"> Forgot password?</string>
+    <string name="title_activity_main"> MainActivity</string>
+    <string name="navigation_drawer_open"> Open navigation drawer</string>
+    <string name="navigation_drawer_close"> Close navigation drawer</string>
+    <string name="nav_header_title"> Android Studio</string>
+    <string name="nav_header_subtitle"> android.studio@android.com</string>
+    <string name="nav_header_desc"> Navigation header</string>
+    <string name="action_settings"> Settings</string>
 </resources>
