Splash/Login/Account pages UI in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="email"> Email address</string>
     <string name="password"> Password</string>
     <string name="forgotPassword"> Forgot password?</string>
+    <string name="welcome">Welcome back! Log in to continue</string>
+    <string name="noAccount">Dont have an account? Sign up</string>
+
+
+
+
     <string name="title_activity_main"> MainActivity</string>
     <string name="navigation_drawer_open"> Open navigation drawer</string>
     <string name="navigation_drawer_close"> Close navigation drawer</string>
