--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,11 @@
     <string name="nav_header_desc"> Navigation header</string>
     <string name="action_settings"> Settings</string>
     <string name="title_activity_dashboard">DashboardActivity</string>
+
+    <string name="events"> EVENTS </string>
+    <string name="chat"> CHAT </string>
+    <string name="quiz"> QUIZ </string>
+    <string name= "account"> ACCOUNT</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
