--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="welcome">Welcome back! Log in to continue</string>
     <string name="noAccount">Dont have an account? Sign up</string>
 
+    <string name="logOut"> Log out</string>
+
 
     <string name="title_activity_main"> MainActivity</string>
     <string name="navigation_drawer_open"> Open navigation drawer</string>
